--- a/Final_report.html
+++ b/Final_report.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2025-04-25" />
 
-<title>Project_part_2</title>
+<title>Project_Final</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -574,7 +574,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Project_part_2</h1>
+<h1 class="title toc-ignore">Project_Final</h1>
 <h4 class="author">Peicheng Ji</h4>
 <h4 class="date">2025-04-25</h4>
 
